# calendar

./: .env.example  001_initial_schema.py  main.py  pyproject.toml
app/: main.py
app/api/: main.py
app/bot/handlers/: calendar.py  confirmation.py  message.py  start.py
app/db/: session.py
app/db/models/: __init__.py  main.py  models.py
app/handlers/: start.py
app/middlewares/: logger.py
app/repositories/: google_account.py  google_calendar.py  user.py
app/services/ai/: openai_client.py
app/services/crypto/: service.py
app/services/event/event_confirmation/: service.py
app/services/event/event_creation/: service.py
app/services/event/event_data_check/: service.py
app/services/event/event_enrichment/link/: service.py
app/services/event/event_enrichment/location/: service.py
app/services/event/event_extraction/: prompts.py  schemas.py  service.py
app/services/event/event_format/: service.py
app/services/event/event_pipeline/: service.py
app/services/event/event_preview/: service.py
app/services/event/event_validation/: service.py
app/services/google_account/: service.py
app/services/google_calendar/: service.py
app/services/input/detector/: service.py
app/services/input/image/: service.py
app/services/input/voice/: service.py
app/services/telegram/: service.py
app/services/user/: service.py
app/services/users/: resolver.py
migrations/: env.py
migrations/versions/: 008bf03c9288_models.py  6fd2b1c5e46c_base.py  aace2c35d562_models.py
